--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 <body>
 
+</header>
+<section id="tartalom">
+    <nav id="menusav">
+        <a href="https://bandiandra.github.io/F-oldal/">Főoldal</a>
+        <a href="https://bandiandra.github.io/kollazs/">Kollázs</a>
+        <a href="https://bandiandra.github.io/szinezo/">Színező</a>
+        <a href="https://bandiandra.github.io/recept/">Recept</a>
+        <a href="https://bandiandra.github.io/el-rhet-s-g/">Elérhetőség</a>
+        <a href="https://bandiandra.github.io/Orarend/">Órarend</a>    
+
 <img src="kando.jpg" alt="Kando">
 
    <h3>Miskolci SZC Kandó Kálmán Informatikai Technikum</h3>
