--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 <body>
 
-</header>
+<header>
 <section id="tartalom">
     <nav id="menusav">
         <a href="https://bandiandra.github.io/F-oldal/">Főoldal</a>
@@ -16,7 +16,7 @@
         <a href="https://bandiandra.github.io/recept/">Recept</a>
         <a href="https://bandiandra.github.io/el-rhet-s-g/">Elérhetőség</a>
         <a href="https://bandiandra.github.io/Orarend/">Órarend</a>    
-
+    </header>
 <img src="kando.jpg" alt="Kando">
 
    <h3>Miskolci SZC Kandó Kálmán Informatikai Technikum</h3>
